# tmbliss

./: Cargo.toml  LICENCE.txt  Makefile  cli.md  homebrew.bliss.plist  homebrew.tmbliss.plist  pretest.sh  readme.md  update_tap.rb
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: args.rs  conf.rs  constants.rs  directory_iterator.rs  filetree.rs  git.rs  lib.rs  logger.rs  recursive_directory_iterator.rs  test_utils.rs  time_machine.rs  xattr.rs
test_assets/: test_config.json  test_config_no_exclude.json  test_config_no_paths.json
test_assets/tmbliss_dir/: .tmbliss  should_not_be_excluded.txt
test_assets/tmbliss_dir/secret/: hidden.txt
tests/: main.rs
