[package]
name = "tmbliss"
version = "0.0.1-beta.4"
edition = "2021"

[[bin]]
name = "tmbliss"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
clap-markdown = "0.1.3"
glob-match = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
uuid = { version = "1.3.2", features = [ "v4", "fast-rng" ] }